docs/7.52/md/abenregular_expression_glosry.md
---
title: "regular_expression_glosry"
description: |
  regular_expression_glosry - ABAP 7.52 language reference documentation
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenregular_expression_glosry.htm"
abapFile: "abenregular_expression_glosry.htm"
keywords: ["do", "try", "class", "abenregular", "expression", "glosry"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP Glossary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_glossary.htm) → 

regular expression

A pattern of literal characters and [special characters](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenregex_syntax_specials.htm) that describes a set of character strings. The use of regular expressions in text searches locates one or more occurrences of the character strings represented by the expression. A search using a regular expression is more powerful than a search for a simple character string, since the regular expression represents a greater (potentially infinite) number of character strings and searches for them in parallel. In ABAP, regular expressions can be used in the statements [FIND](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfind_pattern.htm) and [REPLACE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapreplace_in_pattern.htm), as arguments in certain [predefined functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpredefined_function_glosry.htm "Glossary Entry"), and in the classes CL\_ABAP\_REGEX and CL\_ABAP\_MATCHER.

[→ More](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenregular_expressions.htm)